[package]
name = "artisan_middleware"
version = "5.2.1"
edition = "2021"
authors = [
    "Artisan Hosting",
    "Darrion Whitfield <dwhitfield@ramfield.net>"
]
description = "The main services of the artisan platform to allow communication and management of linux system services"
homepage = "https://docs.artisanhosting.net"
license = "MIT OR Apache-2.0"


[dev-dependencies]
tempfile = "3.5"
mockall = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
dusa_collection_utils = "3.2.1"
# Asynchronous runtime
tokio = { version = "1", features = ["full"] }

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Unix domain sockets and system operations
tokio-uds = "0.2"
nix = { version = "0.29", features = ["process"] }
procfs = "0.16.0"
toml = "0.8.19"
libc = "0.2.159"
config = "0.13.3"
users = "0.11.0"
walkdir = "2.5.0"
colored = "2.1.0"
lazy_static = "1.5.0"
chrono = "0.4.38"
hex = "0.4.3"
colorized = "1.0.0"
sysinfo = "0.32.0"
gethostname = "0.5.0"
reqwest = "0.12.9"
recs_lib = "3.1.3"
systemctl = "0.3.1"
trust-dns-resolver = "0.21.0"
simple_comms = "1.2.0"
aes-gcm = "0.10.3"
rand = "0.8.5"
