[package]
name = "artisan_middleware"
version = "5.5.2"
edition = "2021"
authors = [
    "Artisan Hosting",
    "Darrion Whitfield <dwhitfield@ramfield.net>"
]
description = "The main services of the artisan platform to allow communication and management of linux system services"
homepage = "https://docs.artisanhosting.net"
license = "MIT OR Apache-2.0"

[features]
default = []
cli = []

[dev-dependencies]
tempfile = "3.5"
mockall = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
dusa_collection_utils = "^4.0.2"
# Asynchronous runtime
tokio = { version = "1", features = ["full"] }
colored = "2.1.0"
colorized = "1.0.0"
chrono = "0.4.38"
aes-gcm = "0.10.3"
base64 = "0.22.1"
hex = "0.4.3"
rand = "0.8.5"
lz4 = "1.28.1"
config = "0.13.3"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16.0"
users = "0.11.0"
walkdir = "2.5.0"
lazy_static = "1.5.0"
sysinfo = "0.32.0"
gethostname = "0.5.0"
reqwest = "0.12.9"
#recs_lib = "3.1.4"
trust-dns-resolver = "0.21.0"
bytes = "1.10.1"
simple_comms = "1.2.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.159"
systemctl = "0.3.1"
tokio-uds = "0.2"
nix = { version = "0.29", features = ["process"] }